--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-/* x3xcode creado porfolio y services online */
 /*-----------------------------------------------------------------------------------*/
 /*	GENERAL STYLING
 /*-----------------------------------------------------------------------------------*/
@@ -52,10 +48,7 @@ a, input, select, textarea {
 	-webkit-appearance: none;
 	-webkit-border-radius: 0;
 }
-.projects_slider{
-	display: flex;
-	flex-direction: row;
-}
+
 select:-moz-focusring {
     color: transparent;
 	outline:none !important;
@@ -215,7 +208,7 @@ blockquote:before {content:'“'; position:absolute; left:15px; top:13px; font-s
 /* __________ breadcrumb __________ */
 .breadcrumbs_block {
 	padding:81px 0;
-	background-image:none;
+	background-image:url(../images/clean_code_bg.jpg);
 	background-repeat:no-repeat;
 	background-size:cover;
 }
@@ -257,7 +250,7 @@ header {
 	text-transform:uppercase;
 	line-height:80px;
 	font-size:26px;
-	color:#e1dcdc;
+	color:#333;
 }
 .logo a span {
 	display:inline-block;
@@ -281,7 +274,7 @@ header {
 	right:0;
 	height:80px;
 	width:100%;
-	background: #757575;
+	background-color:#fff;
 	box-shadow:0 2px 3px rgba(0,0,0,0.1);
 }
 
@@ -297,7 +290,7 @@ header {
 	font-weight:900;
 	line-height:20px;
 	font-size:13px;
-	color:#cfcfcf;
+	color:#666;
 	transition: all 0.3s ease-in-out; 
 	-webkit-transition: all 0.3s ease-in-out;
 }
@@ -400,102 +393,9 @@ header {
 	width:140px;
 	padding: 11px 20px 11px 0;
 }
-/*Meni*/
-.pull-right .navigation{
-	position: relative;
-	display: flex;
-	width: 450px;
-	height: 80px;
-	background:#757575;
-	border-radius: 10px;
-}
-.pull-right .navigation ul{
-	position: relative;
-	display: flex;
-	width: 400px;
-}
-.pull-right .navigation ul li{
-	position: relative;
-	display: flex;
-	width: 80px;
-	height: 80px;
-}
-.pull-right .navigation ul li a{
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	width: 100%;
-	text-align: center;
-	font-weight: 500;
-}
-.pull-right .navigation ul li a i{
-	position: relative;
-	display: block;
-	line-height: 85px;
-	font-size: 1.5em;
-	transition: 0.5s;
-	text-align: center;
-	color: rgba(255,255,255,0.5);
-}
-.pull-right .navigation ul li a:hover i{
-	color: rgba(255,255,255,1);
-}
-.pull-right .navigation ul li.active a i{
-	color: #29fd53;
-	transform: translateY(-20px);
-}
-.pull-right .navigation ul li a .text{
-	position: absolute;
-	font-weight: 400;
-	font-size: 0.8em;
-	color: #636262;
-	text-transform: uppercase;
-	transform: translateY(0px);
-	letter-spacing: 0.05em;
-	opacity: 0;
-	z-index: 10;
-}
-.pull-right .navigation ul li.active a .text{
-	opacity: 1;
-	transform: translateY(16px);
-}
-.pull-right .navigation ul .indicator{
-	position: absolute;
-	width: 80px;
-	height: 80px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	cursor: pointer;
-	transition: 0.5s;
-}
-.pull-right .navigation ul .indicator::before{
-	content: '';
-	position: absolute;
-	bottom: 14px;
-	width: 90%;
-	height: 18px;
-	background: #29fd53;
-	border-radius: 10px;
-}
-.pull-right .navigation ul li:nth-child(2).active ~ .indicator
-{
-	transform: translateX(calc(80px * 1));
-}
-.pull-right .navigation ul li:nth-child(3).active ~ .indicator
-{
-	transform: translateX(calc(80px * 2));
-}
-.pull-right .navigation ul li:nth-child(4).active ~ .indicator
-{
-	transform: translateX(calc(80px * 3));
-}
-.pull-right .navigation ul li:nth-child(5).active ~ .indicator
-{
-	transform: translateX(calc(80px * 4));
-}
+
+
+
 
 
 
@@ -559,7 +459,7 @@ header {
 /* __________ Clean Code __________ */
 .cleancode_block {
 	padding:96px 0 78px;
-	background-image:url('./assets/images/clean_code_bg.jpg');
+	background-image:url(../images/clean_code_bg.jpg);
 	background-size:cover;
 	background-position:0 0;
 	background-attachment:fixed !important;
@@ -637,14 +537,13 @@ header {
 	-webkit-background-size:100% auto;
 	transition: transform 0.2s ease-in-out; 
 	-webkit-transition: -webkit-transform 0.2s ease-in-out;
-	color: #161616;
 }
-.cleancode_block .nav-tabs li a.i1 i {background-image:url('./assets/images/i1.png');}
-.cleancode_block .nav-tabs li a.i2 i {background-image:url('./assets/images/i2.png');}
-.cleancode_block .nav-tabs li a.i3 i {background-image:url('./assets/images/i3.png');}
-.cleancode_block .nav-tabs li a.i4 i {background-image:url('./assets/images/i4.png');}
-.cleancode_block .nav-tabs li a.i5 i {background-image:url('./assets/images/i5.png');}
-.cleancode_block .nav-tabs li a.i6 i {background-image:url('./assets/images/i6.png');}
+.cleancode_block .nav-tabs li a.i1 i {background-image:url(../images/i1.png);}
+.cleancode_block .nav-tabs li a.i2 i {background-image:url(../images/i2.png);}
+.cleancode_block .nav-tabs li a.i3 i {background-image:url(../images/i3.png);}
+.cleancode_block .nav-tabs li a.i4 i {background-image:url(../images/i4.png);}
+.cleancode_block .nav-tabs li a.i5 i {background-image:url(../images/i5.png);}
+.cleancode_block .nav-tabs li a.i6 i {background-image:url(../images/i6.png);}
 
 .nav-tabs li a:hover,
 .nav-tabs li a:focus {
@@ -816,7 +715,7 @@ header {
 	height:36px;
 	margin-left:-30px;
 	opacity:0;
-	background-image:url('./assets/images/zoom.png');
+	background-image:url(../images/zoom.png);
 	background-repeat:no-repeat;
 	background-position:0 0;
 	background-size:100% auto;
@@ -828,11 +727,7 @@ header {
 	bottom:56px;
 	opacity:1;
 }
-.flexi{
-	display: flex;
-	flex-direction: row;
-}
-.work_item a.zoom:hover {background-image:url('./assets/images/zoom_h.png');}
+.work_item a.zoom:hover {background-image:url(../images/zoom_h.png);}
 
 
 
@@ -916,7 +811,7 @@ ul.project_info li span {color:#979797;}
 /*-----------------------------------------------------------------------------------*/
 #team {
 	padding:75px 0 100px;
-	background-image:url('./assets/images/zoom_h.png');
+	background-image:url(../images/team_bg.jpg);
 	background-size:cover;
 	background-attachment:fixed !important;
 }
@@ -1078,7 +973,7 @@ ul.project_info li span {color:#979797;}
 	height:36px;
 	margin:0 0 -18px -30px;
 	opacity:0;
-	background-image:url('./assets/images/zoom_h.png');
+	background-image:url(../images/zoom.png);
 	background-repeat:no-repeat;
 	background-position:0 0;
 	background-size:100% auto;
@@ -1090,7 +985,7 @@ ul.project_info li span {color:#979797;}
 	bottom:50%;
 	opacity:1;
 }
-.post_item_img a.link:hover {background-image:url('./assets/images/zoom_h.png');}
+.post_item_img a.link:hover {background-image:url(../images/zoom_h.png);}
 
 
 /* __________ Recent Posts Small __________ */
@@ -1411,7 +1306,7 @@ input[type="color"]:focus {
 	height:36px;
 	margin:0 0 -30px -30px;
 	opacity:0;
-	background-image:url('./assets/images/zoom.png');
+	background-image:url(../images/zoom.png);
 	background-repeat:no-repeat;
 	background-position:0 0;
 	background-size:100% auto;
@@ -1423,7 +1318,7 @@ input[type="color"]:focus {
 	bottom:50%;
 	opacity:1;
 }
-.blog_post a.zoom:hover {background-image:url('./assets/images/zoom_h.png');}
+.blog_post a.zoom:hover {background-image:url(../images/zoom_h.png);}
 
 .blog_post_descr hr {
 	border-color:#e9e9e9;
@@ -1570,12 +1465,7 @@ input[type="color"]:focus {
 
 
 
-.padbot20 .projects-wrapper .projects_slider ul{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	background: #000;
-}
+
 
 /* __________ Comments __________ */
 #comments .avatar {
@@ -1622,18 +1512,7 @@ input[type="color"]:focus {
 
 
 
-.final{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	flex-wrap: wrap;
-}
-.final .social{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
+
 
 
 
@@ -1861,7 +1740,22 @@ input[type="color"]:focus {
 
 @media (min-width: 768px) and (max-width: 991px) {
 	.logo a {font-size:22px;}
-	/*Meni*/
+	
+	
+	#search-form input:focus {width:42px;}
+	
+
+/* __________ Menu __________ */
+	.navmenu ul li a {padding-left:10px; padding-right:10px; font-size:12px;}
+	.pull-left a{
+		display: none;
+	}
+	.pull-right .navigation{
+
+	}
+	
+
+/*Meni*/
 .pull-right .navigation{
 	position: relative;
 	display: flex;
@@ -1873,13 +1767,13 @@ input[type="color"]:focus {
 .pull-right .navigation ul{
 	position: relative;
 	display: flex;
-	width: 400px;
+	width: 100%;
 }
 .pull-right .navigation ul li{
 	position: relative;
 	display: flex;
-	width: 80px;
-	height: 80px;
+	width: 50px;
+	height: 50px;
 }
 .pull-right .navigation ul li a{
 	position: relative;
@@ -1959,13 +1853,6 @@ input[type="color"]:focus {
 }
 
 	
-	#search-form input:focus {width:42px;}
-	
-
-/* __________ Menu __________ */
-	.navmenu ul li a {padding-left:10px; padding-right:10px; font-size:12px;}
-	
-	
 	
 /* __________ Index __________ */
 	.cleancode_block p.title {font-size:60px; line-height:60px;}
@@ -1988,7 +1875,12 @@ input[type="color"]:focus {
 	
 	
 	.img_wrapper {width:100px !important;}
-	
+	.padbot20 .projects-wrapper .projects_slider ul{
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		background: #000;
+	}
 	
 	.post_item_img a.link {width:40px; height:24px; margin:0 0 -12px -20px;}
 	.post_item_img a.link:hover {background-position:0 -24px;}
@@ -2029,7 +1921,16 @@ input[type="color"]:focus {
 	.post_item_content_widget a.title {font-size:16px; line-height:20px;}
 
 	
-	
+.final{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.final .social{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 	
 
 /* __________ All Styles __________ */
@@ -2052,102 +1953,173 @@ input[type="color"]:focus {
 
 @media (max-width: 767px) {
 	.container {padding-left:15px; padding-right:15px;}
-	.pull-right .navigation{
-		position: relative;
-		display: flex;
-		width: 100%;
-		height: 80px;
-		background:#757575;
-		border-radius: 10px;
-	}
-	.pull-right .navigation ul{
-		position: relative;
-		display: flex;
-		width: 100%;
-	}
-	.pull-right .navigation ul li{
-		position: relative;
-		display: flex;
-		width: 80px;
-		height: 80px;
-	}
-	.pull-right .navigation ul li a{
-		position: relative;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		width: 100%;
-		text-align: center;
-		font-weight: 500;
-	}
-	.pull-right .navigation ul li a i{
-		position: relative;
-		display: block;
-		line-height: 85px;
-		font-size: 1.5em;
-		transition: 0.5s;
-		text-align: center;
-		color: rgba(255,255,255,0.5);
-	}
-	.pull-right .navigation ul li a:hover i{
-		color: rgba(255,255,255,1);
-	}
-	.pull-right .navigation ul li.active a i{
-		color: #29fd53;
-		transform: translateY(-20px);
-	}
-	.pull-right .navigation ul li a .text{
-		position: absolute;
-		font-weight: 400;
-		font-size: 0.8em;
-		color: #636262;
-		text-transform: uppercase;
-		transform: translateY(0px);
-		letter-spacing: 0.05em;
-		opacity: 0;
-		z-index: 10;
-	}
-	.pull-right .navigation ul li.active a .text{
-		opacity: 1;
-		transform: translateY(16px);
-	}
-	.pull-right .navigation ul .indicator{
-		position: absolute;
-		width: 80px;
-		height: 80px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		cursor: pointer;
-		transition: 0.5s;
-	}
-	.pull-right .navigation ul .indicator::before{
-		content: '';
-		position: absolute;
-		bottom: 14px;
-		width: 90%;
-		height: 18px;
-		background: #29fd53;
-		border-radius: 10px;
-	}
-	.pull-right .navigation ul li:nth-child(2).active ~ .indicator
-	{
-		transform: translateX(calc(80px * 1));
-	}
-	.pull-right .navigation ul li:nth-child(3).active ~ .indicator
-	{
-		transform: translateX(calc(80px * 2));
-	}
-	.pull-right .navigation ul li:nth-child(4).active ~ .indicator
-	{
-		transform: translateX(calc(80px * 3));
-	}
-	.pull-right .navigation ul li:nth-child(5).active ~ .indicator
-	{
-		transform: translateX(calc(80px * 4));
-	}
 	
+	.pull-left a{
+		display: none;
+	}
+		
+
+/*Meni*/
+.pull-right .navigation{
+	position: relative;
+	display: flex;
+	width: 100%;
+	height: 80px;
+	background:#757575;
+	border-radius: 10px;
+}
+.pull-right .navigation ul{
+	position: relative;
+	display: flex;
+	width: 100%;
+}
+.pull-right .navigation ul li{
+	position: relative;
+	display: flex;
+	
+}
+.pull-right .navigation ul li a{
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	text-align: center;
+	font-weight: 500;
+}
+.pull-right .navigation ul li a i{
+	position: relative;
+	display: block;
+	line-height: 85px;
+	font-size: 1.5em;
+	transition: 0.5s;
+	text-align: center;
+	color: rgba(255,255,255,0.5);
+}
+.pull-right .navigation ul li a:hover i{
+	color: rgba(255,255,255,1);
+}
+.pull-right .navigation ul li.active a i{
+	color: #29fd53;
+	transform: translateY(-20px);
+}
+
+.pull-right .navigation ul .indicator{
+	position: absolute;
+	width: 80px;
+	height: 80px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	transition: 0.5s;
+}
+.pull-right .navigation ul .indicator::before{
+	content: '';
+	position: absolute;
+	bottom: 14px;
+	width: 90%;
+	height: 18px;
+	background: #29fd53;
+	border-radius: 10px;
+}
+.pull-right .navigation ul li:nth-child(2).active ~ .indicator
+{
+	transform: translateX(calc(80px * 1));
+}
+.pull-right .navigation ul li:nth-child(3).active ~ .indicator
+{
+	transform: translateX(calc(80px * 2));
+}
+.pull-right .navigation ul li:nth-child(4).active ~ .indicator
+{
+	transform: translateX(calc(80px * 3));
+}
+.pull-right .navigation ul li:nth-child(5).active ~ .indicator
+{
+	transform: translateX(calc(80px * 4));
+}
+	
+/* __________ Menu __________ */
+.menu_block {
+	position:fixed;
+	z-index:9999;
+	left:0;
+	top:0;
+	right:0;
+	height:80px;
+	width:100%;
+	background-color:#fff;
+	box-shadow:0 2px 3px rgba(0,0,0,0.1);
+}
+
+.navmenu ul li {
+	position:relative;
+	display:inline-block;
+}
+.navmenu ul li a {
+	display:block;
+	margin:0 0 0 -3px;
+	padding:20px 20px;
+	text-transform:uppercase;
+	font-weight:900;
+	line-height:20px;
+	font-size:13px;
+	color:#666;
+	transition: all 0.3s ease-in-out; 
+	-webkit-transition: all 0.3s ease-in-out;
+}
+.navmenu li:hover a,
+.navmenu li.active a {
+	color:#333;
+}
+
+/* Sub menu */
+.sub-menu ul {
+	display: none;
+	position: absolute;
+	z-index: 9990;
+	width: 100%;
+	left: 50%;
+	top: 100%;
+	padding: 0;
+	margin: 0 0 0 -90px;
+}
+.sub-menu.last ul {right:0; left:auto;}
+.sub-menu ul:before {
+	content:'';
+	position:absolute;
+	left:50%;
+	top:-6px;
+	margin-left:-5px;
+	width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 6px solid #1c1c1c;
+}
+
+.sub-menu ul li  {
+	margin:0;
+	padding:0;
+	width:100%;
+	border-top: 0;
+}
+.sub-menu ul li a {
+	position:relative;
+	margin:0;
+	padding: 10px 4px 10px 15px;
+	font-weight:400;
+	text-align:left;
+	font-size:12px;
+	color:#999 !important;
+	background:#1c1c1c;
+	border-bottom:1px solid #282828;
+}
+.sub-menu ul li:last-child a {border-bottom:0;}
+
+.sub-menu ul li.active a, .sub-menu ul li a:hover {color:#fff !important; background:#161616;}
 	h2 {font-size:30px; line-height:32px;}
 	
 	
@@ -2283,92 +2255,6 @@ input[type="color"]:focus {
 }
 
 @media (max-width: 479px) {
-	.pull-right .navigation{
-		position: relative;
-		display: flex;
-		width: 100%;
-		height: 80px;
-		background:#757575;
-		justify-content: flex-end;
-		z-index: 1000;
-		top: -58px;
-		right: -22px;
-	
-	}
-	.pull-right .navigation ul{
-		position: relative;
-		display: flex;
-		width: 100%;
-		
-	}
-	.pull-right .navigation ul li{
-		position: relative;
-		display: flex;
-		width: 70px;
-		height: 70px;
-	}
-	.pull-right .navigation ul li a{
-		position: relative;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		width: 100%;
-		text-align: center;
-		font-weight: 500;
-	}
-	.pull-right .navigation ul li a i{
-		position: relative;
-		display: block;
-		line-height: 85px;
-		font-size: 1.5em;
-		transition: 0.5s;
-		text-align: center;
-		color: rgba(255,255,255,0.5);
-	}
-	.pull-right .navigation ul li a:hover i{
-		color: rgba(255,255,255,1);
-	}
-	.pull-right .navigation ul li.active a i{
-		color: #29fd53;
-		transform: translateY(-20px);
-	}
-	.pull-right .navigation ul li a .text{
-		display: none;
-	}
-	.pull-right .navigation ul li.active a .text{
-		opacity: 1;
-		transform: translateY(16px);
-	}
-	.pull-right .navigation ul .indicator{
-		display: none;
-	}
-	.pull-right .navigation ul .indicator::before{
-		content: '';
-		position: absolute;
-		bottom: 14px;
-		width: 90%;
-		height: 18px;
-		background: #29fd53;
-		border-radius: 10px;
-	}
-	.pull-right .navigation ul li:nth-child(2).active ~ .indicator
-	{
-		transform: translateX(calc(80px * 1));
-	}
-	.pull-right .navigation ul li:nth-child(3).active ~ .indicator
-	{
-		transform: translateX(calc(80px * 2));
-	}
-	.pull-right .navigation ul li:nth-child(4).active ~ .indicator
-	{
-		transform: translateX(calc(80px * 3));
-	}
-	.pull-right .navigation ul li:nth-child(5).active ~ .indicator
-	{
-		transform: translateX(calc(80px * 4));
-	}
-
 
 	#search-form {display:none;}
 	
